--- a/css/style.css
+++ b/css/style.css
@@ -1139,6 +1139,35 @@ template {
   color: #E0E0E0;
 }
 
+.footer-bottom {
+  display: flex;
+  grid-column: span 4;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-bottom__ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-bottom__link {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+}
+
+.footer-bottom__image {
+  object-fit: cover;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1157,6 +1186,9 @@ template {
   .card {
     width: 230px;
     height: 230px;
+  }
+  .footer__input {
+    flex-basis: 100%;
   }
 }
 
@@ -1215,6 +1247,40 @@ template {
   .card {
     width: 340px;
     height: 230px;
+  }
+  .footer-wrapper {
+    grid-template-columns: repeat(6, 1fr);
+    grid-row-gap: 40px;
+  }
+  .footer__input {
+    flex-basis: 49%;
+  }
+  .footer__logo {
+    grid-row: 1 / 2;
+    grid-column: span 2;
+  }
+  .footer__social-network {
+    grid-row: 1 / 2;
+    grid-column: span 4;
+    align-self: center;
+  }
+  .footer__categories {
+    grid-row: 2 / 3;
+    grid-column: span 2;
+  }
+  .footer__legal {
+    grid-column: span 2;
+  }
+  .footer__additional {
+    grid-column: span 2;
+  }
+  .footer__contact-details {
+    grid-column: span 5;
+    grid-row: 3;
+  }
+  .footer__contact-form {
+    grid-column: span 5;
+    grid-row: 4;
   }
 }
 
@@ -1319,6 +1385,9 @@ template {
     width: 48%;
     height: 255px;
   }
+  .footer__input {
+    flex-basis: 100%;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1378,6 +1447,37 @@ template {
   }
   .card {
     width: 100%;
+  }
+  .footer-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .footer__logo {
+    grid-row: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    grid-row: 2;
+    grid-column: 1;
+  }
+  .footer__additional {
+    grid-row: 3;
+    grid-column: 1;
+  }
+  .footer__categories {
+    grid-row: 4;
+    grid-column: 1;
+  }
+  .footer__legal {
+    grid-row: 5;
+    grid-column: 1;
+  }
+  .footer__contact-detalies {
+    grid-row: 6;
+    grid-column: 1;
+  }
+  .footer__contact-form {
+    grid-row: 7;
+    grid-column: 1;
   }
 }
 /*# sourceMappingURL=style.css.map */
