--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -90,17 +90,39 @@
     min-width: 160px
     min-height: 50px
     padding: 18px
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
     color: $light
     background-color: $primary
     border-radius: 4px
     border: none
   &__info
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
     color: #E0E0E0
+  &-bottom
+    display: flex
+    grid-column: span 4
+    // grid-template: 1fr / repeat(2, 50%)
+    align-items: center
+    justify-content: center
+    &__ul
+      display: flex
+      justify-content: center
+      align-items: center
+      list-style: none
+      margin: 0
+      padding: 0
+    &__link
+      text-decoration: none 
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+      color: $light
+    &__image
+      object-fit: cover
